# bin-notifier

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.mcp  README.md  TODOS.md  config.example.yaml  go.mod  go.sum  run_notifier.sh
.github/workflows/: ci.yml  release.yml
cmd/api/: main.go  main_test.go
cmd/notifier/: main.go  main_test.go
cmd/server/: main.go  main_test.go
deploy/helm/bin-notifier/: .helmignore  Chart.yaml  ci-values.yaml  values.yaml
docs/plans/: 2026-02-25-multiple-locations-design.md  2026-02-25-multiple-locations-plan.md  2026-02-27-multi-schedule-collection-days-design.md  2026-02-27-multi-schedule-collection-days.md  2026-02-27-wokingham-scraper-design.md  2026-02-27-wokingham-scraper-plan.md  2026-03-02-env-phone-numbers-design.md  2026-03-02-env-phone-numbers-plan.md
mcp/: Dockerfile  README.md  pyproject.toml
mcp/src/bin_notifier_mcp/: __main__.py  client.py  server.py
mcp/tests/: test_client.py  test_server.py
pkg/api/: auth.go  auth_test.go  errors.go  handlers.go  handlers_test.go  server.go  server_test.go
pkg/apiclient/: client.go  client_test.go
pkg/cache/: cache.go  cache_test.go
pkg/clients/: appriseclient.go  appriseclient_test.go  twilioclient.go  twilioclient_test.go
pkg/config/: config.go  config_test.go
pkg/dateutil/: dateutil.go  dateutil_test.go
pkg/regexp/: regexp.go  regexp_test.go
pkg/schedule/: schedule.go  schedule_test.go
pkg/scraper/: bracknell.go  scraper.go  scraper_test.go  wokingham.go
pkg/store/: store.go  store_test.go
scripts/: manual-test.sh
(+11 files in other folders)
