[project]
name = "bin-notifier-mcp"
version = "0.1.0"
description = "MCP server for bin-notifier"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
]

[project.scripts]
bin-notifier-mcp = "bin_notifier_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bin_notifier_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
